@@ -25,58 +25,80 @@
 # -m mu		1 (range: 0 to max(double))
 # -i initPoints	10000 (number of points to use for initialization)
 
-# Reclustering:  variant of DBSCAN
-
-
 
 DSC_DenStream <- function(epsilon, beta=0.001, mu=1, 
-	initPoints=100, minPoints=10, 
-	horizon=1000, lambda=NULL) {
+  initPoints=100, minPoints=10, 
+  horizon=1000, lambda=NULL, macro=TRUE) {
   
   if (horizon < 1)
     stop("invalid horizon, range: >= 1")
   
   if (epsilon <= 0)
     stop("invalid epsilon")
-
+  
   if (minPoints < 0)
     stop("invalid minPoints, must be > 0")
-
+  
   if (beta <= 0 || beta >= 1)
     stop("invalid beta, range: 0 to 1 exclusive")
-
+  
   if (mu <= 0)
     stop("invalid mu, must be > 0")
-
+  
   if (initPoints < 0)
     stop("invalid initPoints, must be > 0")
-
+  
   paramList <- list(h = horizon,
-	            e = epsilon,
-                    p = minPoints,
-                    b = beta,
-                    m = mu,
-                    i = initPoints)
-
+    e = epsilon,
+    p = minPoints,
+    b = beta,
+    m = mu,
+    i = initPoints)
+  
   # converting the param list to a cli string to use in java
   cliParams <- convert_params(paramList)
-
+  
   # initializing the clusterer
   clusterer <- .jnew("moa/clusterers/denstream/DenStream")
   options <- .jcall(clusterer, "Lmoa/options/Options;", "getOptions")
   .jcall(options, "V", "setViaCLIString", cliParams)
   .jcall(clusterer, "V", "prepareForUse")
-
+  
+  # overwrite lambda
   if(!is.null(lambda))
-  	.jfield(clusterer,"lambda")<-lambda
-
+    .jfield(clusterer,"lambda")<-lambda
+  
   # initializing the R object
   l <- list(description = "DenStream",
-            options = cliParams,
-            javaObj = clusterer)
-
+    options = cliParams,
+    javaObj = clusterer,
+    eps = epsilon,
+    macro = macro)
+  
   class(l) <- c("DSC_DenStream","DSC_Micro","DSC_MOA","DSC")
   l
 }
 
+get_macroclusters.DSC_DenStream <- function(x) {
+  if(! x$macro) stop("Not implemented yet!")
+  
+  macro <- DSC_Hierarchical(h=2*x$eps+1e-9, method="single")
+  recluster(macro, x)
+  get_centers(macro, type="macro")
+}
 
+get_macroweights.DSC_DenStream <- function(x) {
+  if(! x$macro) stop("Not implemented yet!")
+  
+  macro <- DSC_Hierarchical(h=2*x$eps+1e-9, method="single")
+  recluster(macro, x)
+  get_weights(macro, type="macro")
+}
+
+microToMacro.DSC_DenStream <- function(x, micro=NULL) {
+  if(! x$macro) stop("Not implemented yet!")
+  
+  macro <- DSC_Hierarchical(h=2*x$eps+1e-9, method="single")
+  recluster(macro, x)
+  microToMacro(macro, micro)  
+}
